@@ -1,5 +1,6 @@
 2023-12-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Only remove incompletely written db file if it was created by aide
+	* Show number of skipped files on progress bar
 
 2023-12-29 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Improve logging
